--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 csv = "1.3.1"
 indicatif = "0.18.0"
+itertools = "0.14.0"
 miette = { version = "7.6.0", features = ["fancy"] }
 plotters = "0.3.7"
 thiserror = "2.0.16"
