--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ csv = "1.3.1"
 indicatif = "0.18.0"
 itertools = "0.14.0"
 miette = { version = "7.6.0", features = ["fancy"] }
+ndarray = "0.16.1"
+ndarray-npy = "0.9.1"
 # Use ab_glyph to avoid font discovery issues
 plotters = { version = "0.3.7", default-features = false, features = ["ab_glyph", "bitmap_backend", "bitmap_encoder"] }
 rayon = "1.11.0"
+serde_json = "1.0.145"
 thiserror = "2.0.16"
+zip = "6.0.0"
