--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ clap = { version = "4.5.48", features = ["derive"] }
 csv = "1.3.1"
 indicatif = "0.18.0"
 itertools = "0.14.0"
+memmap2 = "0.9.9"
 miette = { version = "7.6.0", features = ["fancy"] }
 ndarray = "0.16.1"
 ndarray-npy = "0.9.1"
