--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,31 @@
 repos:
-- repo: local
-  hooks:
-    - id: cargo-check
-      name: cargo check
-      entry: cargo check --workspace --all-targets -q
-      language: system
-      pass_filenames: false
+  - repo: local
+    hooks:
+      - id: cargo-check
+        name: cargo check
+        entry: cargo check --workspace --all-targets -q
+        language: system
+        pass_filenames: false
 
-    - id: cargo-fmt
-      name: cargo fmt (check)
-      entry: cargo fmt --all -- --check
-      language: system
-      pass_filenames: false
-      types: [rust]
+      - id: cargo-fmt
+        name: cargo fmt (check)
+        entry: cargo fmt --all -- --check
+        language: system
+        pass_filenames: false
+        types: [rust]
 
-    - id: cargo-test
-      name: cargo test
-      entry: cargo test --workspace --all-targets -q
-      language: system
-      pass_filenames: false
-      types: [rust]
+      - id: cargo-clippy
+        name: cargo clippy
+        # Fail on warnings
+        entry: cargo clippy --workspace --all-targets -- -D warnings
+        language: system
+        pass_filenames: false
+        types: [rust]
+
+      - id: cargo-test
+        name: cargo test
+        entry: cargo test --workspace --all-targets -q
+        language: system
+        pass_filenames: false
+        types: [rust]
+        
