Add AADR data preparation scripts

--- a/benchmarks/pixi.toml
+++ b/benchmarks/pixi.toml
@@ -12,6 +12,9 @@ findutils = "*"
 hyperfine = "*"
 python = ">=3.10"
 
+[tasks.prepare-aadr-data]
+cmd = "python aadr/prepare_aadr_data.py"
+
 [tasks.prepare-runtime-data]
 cmd = "python runtime/prepare_indo_european_data.py"
 
