Update pixi.toml field

--- a/benchmarks/pixi.toml
+++ b/benchmarks/pixi.toml
@@ -1,4 +1,4 @@
-[project]
+[workspace]
 name = "fastpmr-benchmarks"
 version = "0.1.0"
 description = "Pixi environment for running fastpmr benchmarks."
