Add AADR .npz output to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 archive/
 sandbox*/
 benchmarks/aadr/data
+benchmarks/aadr/results/fastpmr/*.npz
 benchmarks/runtime/data
 
 # Byte-compiled / optimized / DLL files
