--- a/benchmarks/pixi.toml
+++ b/benchmarks/pixi.toml
@@ -12,6 +12,8 @@ findutils = ">=4.10.0,<5"
 hyperfine = ">=1.20.0,<2"
 python = ">=3.10,<3.15"
 matplotlib = ">=3.10.8,<4"
+numpy = ">=2.4.1,<3"
+scipy = ">=1.17.0,<2"
 seaborn = ">=0.13.2,<0.14"
 
 [tasks.prepare-aadr-data]
@@ -19,6 +21,9 @@ cmd = "python aadr/prepare_aadr_data.py"
 
 [tasks.fastpmr-aadr]
 cmd = "python aadr/run_fastpmr.py"
+
+[tasks.analyze-aadr]
+cmd = "python aadr/analyze_aadr_data.py"
 
 [tasks.prepare-runtime-data]
 cmd = "python runtime/prepare_indo_european_data.py"
