--- a/benchmarks/pixi.toml
+++ b/benchmarks/pixi.toml
@@ -10,6 +10,7 @@ bash = ">=5.2.37,<6"
 coreutils = ">=9.5,<10"
 findutils = ">=4.10.0,<5"
 hyperfine = ">=1.20.0,<2"
+pandas = ">=3.0.1,<4"
 python = ">=3.10,<3.15"
 matplotlib = ">=3.10.8,<4"
 numpy = ">=2.4.1,<3"
