--- a/benchmarks/pixi.toml
+++ b/benchmarks/pixi.toml
@@ -17,26 +17,26 @@ numpy = ">=2.4.1,<3"
 scipy = ">=1.17.0,<2"
 seaborn = ">=0.13.2,<0.14"
 
-[tasks.prepare-aadr-data]
+[tasks.prepare-aadr]
 cmd = "python aadr/prepare_aadr_data.py"
 
 [tasks.fastpmr-aadr]
-cmd = "python aadr/run_fastpmr.py"
+cmd = "python aadr/run_fastpmr_aadr.py"
 
 [tasks.analyze-aadr]
-cmd = "python aadr/analyze_aadr_data.py"
+cmd = "python aadr/analyze_aadr_results.py"
 
-[tasks.prepare-runtime-data]
+[tasks.prepare-runtime-benchmarks]
 cmd = "python runtime/prepare_indo_european_data.py"
 
-[tasks.samples]
+[tasks.samples-benchmark]
 cmd = "python runtime/sample_count_benchmark.py"
 
-[tasks.variants]
+[tasks.variants-benchmark]
 cmd = "python runtime/variant_count_benchmark.py"
 
-[tasks.threads]
+[tasks.threads-benchmark]
 cmd = "python runtime/thread_count_benchmark.py"
 
-[tasks.plot-runtime-data]
-cmd = "python runtime/plot_benchmark_data.py"
+[tasks.plot-runtime-benchmarks]
+cmd = "python runtime/plot_benchmark_results.py"
